# iQT

./: .gitignore  CMakeLists.txt  README.md  analyze_fold3.py  check_label_balance.py  check_regime_dist.py  monitor_all.sh  requirements.txt
dashboard/live/: live_command_center.html
src/cpp/: CMakeLists.txt  ExecutionEngine.hpp  MarketDataFeed.h  Order.h  PositionManager.cpp  PositionManager.hpp  SignalSubscriber.hpp  main.cpp
src/execution/: CMakeLists.txt  ExecutionEngine.hpp  Order.h  SignalSubscriber.hpp  main.cpp
src/intelligence/: allocation.py  backtester.py  bridge.py  dashboard_generator.py  data_loader.py  ensemble.py  features.py  live_signals.py  main.py  optimization.py  regime.py  risk_manager.py  stress_test.py
src/python/: allocation.py  backtester.py  bridge.py  dashboard_generator.py  data_loader.py  ensemble.py  features.py  live_signals.py  main.py  optimization.py  regime.py  report_generator.py  risk_manager.py  stress_test.py
